Navbar и собственный сниппет

--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -1,5 +1,6 @@
 .app.ligth {
     --bg-color: rgb(240, 240, 248);
+    --inverted-bg-color: rgb(9, 9, 107);
 
     --primary-color: rgb(26, 7, 174);
     --secondary-color: rgb(8, 164, 242);
