первый виджет navbar и ui component AppLink

--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -4,4 +4,6 @@
 
     --primary-color: rgb(27, 163, 27);
     --secondary-color: rgb(8, 242, 8);
+    --inverted-primary-color: rgb(26, 7, 174);
+    --inverted-secondary-color: rgb(8, 164, 242);
 }
