--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -4,4 +4,6 @@
 
     --primary-color: rgb(26, 7, 174);
     --secondary-color: rgb(8, 164, 242);
+    --inverted-primary-color: rgb(27, 163, 27);
+    --inverted-secondary-color: rgb(8, 242, 8);
 }
