--- a/src/widgets/Navbar/ui/Navbar.module.scss
+++ b/src/widgets/Navbar/ui/Navbar.module.scss
@@ -1,5 +1,14 @@
 .Navbar {
     width: 100%;
-    height: 50px;
+    height: var(--navbar-height);
     background: var(--inverted-bg-color);
+    display: flex;
+    align-items: center;
+    padding: 20px;
+}
+.link {
+    margin-left: auto;
+}
+.mainLink {
+    margin-right: 15px;
 }
