добавлена работа с языками

--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -1,10 +1,10 @@
 .Button {
     cursor: pointer;
+    color: var(--inverted-primary-color);
 }
 
 .clear {
     padding: 0;
-    margin: 0;
     background: none;
     border: none;
     outline: none;
