--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,9 +1,8 @@
 .app.dark {
-    --bg-color: rgb(9, 9, 107);
-    --inverted-bg-color: rgb(240, 240, 248);
-
-    --primary-color: rgb(27, 163, 27);
-    --secondary-color: rgb(8, 242, 8);
-    --inverted-primary-color: rgb(26, 7, 174);
-    --inverted-secondary-color: rgb(8, 164, 242);
+    --bg-color: rgb(9 9 107);
+    --inverted-bg-color: rgb(240 240 248);
+    --primary-color: rgb(27 163 27);
+    --secondary-color: rgb(8 242 8);
+    --inverted-primary-color: rgb(26 7 174);
+    --inverted-secondary-color: rgb(8 164 242);
 }
