--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -9,3 +9,10 @@
     border: none;
     outline: none;
 }
+
+.outline {
+    padding: 10px 15px;
+    background: none;
+    border: 1px solid var(--primary-color);
+    color: var(--primary-color);
+}
