add props for component Button

--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -16,3 +16,37 @@
     border: 1px solid var(--primary-color);
     color: var(--primary-color);
 }
+
+.background {
+    border: none;
+    background: var(--bg-color);
+    color: var(--primary-color);
+}
+
+.backgroundInverted {
+    border: none;
+    background: var(--inverted-bg-color);
+    color: var(--inverted-primary-color);
+}
+
+.square {
+    padding: 0;
+}
+
+.square.size_m {
+    width: var(--font-line-m);
+    height: var(--font-line-m);
+    font: var(--font-m);
+}
+
+.square.size_l {
+    width: var(--font-line-l);
+    height: var(--font-line-l);
+    font: var(--font-l);
+}
+
+.square.size_xl {
+    width: var(--font-line-xl);
+    height: var(--font-line-xl);
+    font: var(--font-xl);
+}
