--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -4,17 +4,28 @@
     padding: 6px 15px;
 }
 
-.clear {
+.clear,
+.clearInverted {
     padding: 0;
     background: none;
     border: none;
     outline: none;
 }
 
+.clearInverted {
+    color: var(--inverted-primary-color);
+}
+
 .outline {
     background: none;
     border: 1px solid var(--primary-color);
     color: var(--primary-color);
+}
+
+.outlineInverted {
+    background: none;
+    border: 1px solid var(--inverted-primary-color);
+    color: var(--inverted-primary-color);
 }
 
 .background {
