--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,4 +1,4 @@
-.app.dark {
+.app_dark_theme {
     --bg-color: rgb(9 9 107);
     --inverted-bg-color: rgb(240 240 248);
     --primary-color: rgb(8 242 8);
