--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -1,4 +1,4 @@
-.app.ligth {
+.app_light_theme {
     --bg-color: rgb(240 240 248);
     --inverted-bg-color: rgb(9 9 107);
     --primary-color: rgb(26 7 174);
