--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -9,9 +9,17 @@
     --font-size-xl: 32px;
     --font-line-xl: 40px;
     --font-xl: var(--font-size-xl) / var(--font-line-xl) var(--font-family-main);
+
+    // размеры
     --navbar-height: 50px;
     --sidebar-width: 300px;
     --sidebar-width-collapsed: 80px;
+
+    // z- индексы
     --modal-z-index: 10;
+
+    // цвета
     --overlay-color: rgba(0 0 0 / 60%);
+    --red-light: #ff00;
+    --red-dark: #ce0505;
 }
