--- a/src/entities/Profile/ui/ProfileCard/ProfileCard.module.scss
+++ b/src/entities/Profile/ui/ProfileCard/ProfileCard.module.scss
@@ -17,3 +17,8 @@
 .readonly {
     border: 2px solid var(--inverted-primary-color);
 }
+
+.avatarWrapper {
+    display: flex;
+    justify-content: center;
+}
