--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,8 +1,8 @@
 .app_dark_theme {
     --bg-color: rgb(9 9 107);
     --inverted-bg-color: rgb(240 240 248);
-    --primary-color: rgb(8 242 8);
-    --secondary-color: rgb(27 163 27);
+    --primary-color: rgb(6 247 6);
+    --secondary-color: rgb(2 192 2);
     --inverted-primary-color: rgb(26 7 174);
     --inverted-secondary-color: rgb(8 164 242);
 
@@ -12,4 +12,7 @@
 
     // code
     --code-bg: #1212a1;
+
+    // card
+    --card-bg: #1414a0;
 }
