--- a/src/entities/Article/ui/ArticleList/ArticleList.module.scss
+++ b/src/entities/Article/ui/ArticleList/ArticleList.module.scss
@@ -1,9 +1,15 @@
-.ArticleList {
+.SMALL {
     display: flex;
     flex-wrap: wrap;
+
+    .card {
+        margin-right: 30px;
+        margin-bottom: 30px;
+    }
 }
 
-.card {
-    margin-right: 30px;
-    margin-bottom: 30px;
+.BIG {
+    .card {
+        margin-bottom: 30px;
+    }
 }
