--- a/src/app/styles/themes/orange.scss
+++ b/src/app/styles/themes/orange.scss
@@ -2,7 +2,7 @@
     --bg-color: #fbf7f4;
     --inverted-bg-color: #ff7921;
     --primary-color: #ac2114;
-    --secondary-color: #de3424;
+    --secondary-color: #ed3b2b;
     --inverted-primary-color: rgb(255 255 255);
     --inverted-secondary-color: rgb(201 210 210);
 
