--- a/src/entities/Article/ui/ArticleList/ArticleList.module.scss
+++ b/src/entities/Article/ui/ArticleList/ArticleList.module.scss
@@ -1,11 +1,7 @@
 .SMALL {
     display: flex;
     flex-wrap: wrap;
-
-    .card {
-        margin-right: 30px;
-        margin-bottom: 30px;
-    }
+    gap: 30px;
 }
 
 .BIG {
